--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <head>
   <title>JavaScript Microsoft Graph SPA</title>
   <link rel="icon" href="data:;base64,="> <!-- Suppress favicon error -->
+  <style>
+    .user {
+      border-radius: 50%;
+      border-style: solid;
+      border-width: 5px;
+      height: 150px;
+      width: 150px;
+    }
+  </style>
 </head>
 
 <body>
   <main id="main-container" role="main" class="container">
     <div id="content" style="display: none;">
       <h4>Welcome <span id="userName"></span></h4>    
+      <div>
+        <button id="showProfilePhoto" style="display:none" onclick="displayProfilePhoto();">Show profile picture</button>
+      </div>
+      <img id="userPhoto" class="user" alt="User photo" style="display: none;" />
     </div>
     <a id="signin" onclick="displayUI(); return false;" href="#">
       <img src="./images/ms-symbollockup_signin_light.png" alt="Sign in with Microsoft" />
